# Spinal-cord

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark.py  benchmark_speed.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup.bat  test_pytorch.py  test_spinalcord_generate.py  train_all.py
checkpoints/: training_log.json
configs/: brainpacks.json
convert/: convert_both.py  convert_to_gguf.py  help.txt
dashboard/: index.html  run_dashboard.bat  run_dashboard_brain_only.bat  run_dashboard_llama_scaffold.bat  run_dashboard_llama_scaffold_brain_only.bat  run_dashboard_llama_scaffold_prod.bat  run_dashboard_prod.bat
deploy/: CLOUD.md  README.md  docker-compose.cloud.example.yml  docker-compose.yml  open_firewall_llama.ps1
deploy/templates/: default.conf.template
docs/: BRAINPACKS.md  CONVERSATION_TRAINING.md  INFERENCE_QUALITY_DEBUG.md  LLAMA_SERVER_MODEL_ID.md  TROUBLESHOOTING.md
envs/spinalcord_bench/: Dockerfile  README.md  __init__.py  baseline_run.py  client.py  models.py  pyproject.toml
envs/spinalcord_bench/server/: __init__.py  app.py  graders.py  spinalcord_bench_env.py
hf_export/: SPINALCORD_TOKENIZER.txt  tokenizer.json  tokenizer.vocab  tokenizer_config.json
inference/: CMakeLists.txt  out.txt  run_spinalcord.bat  spinalcord.cpp
models/hf_export/: config.json
scripts/: benchmark_llama_server.ps1  benchmark_serverpack_ab.py  demo_early_exit.py  demo_pluggable_spinalcord.py  diagnose_inference_quality.py  run_brainpack.py  tune_to_2x.py  verify_llama_server.ps1
server/: __init__.py  app.py
train/: config.py  dataset.py  distill_draft.py  model.py  mypy_output.txt  pluggable_spinalcord.py  rag_simple.py  tokenizer_sc.py  train.py  train_brain.py  train_tokenizer.py  train_tokenizer_spm.py
